--- a/public/index.netlify.html
+++ b/public/index.netlify.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="module-search-course-and-register" class="module-entry"></div>
 </body>
 
 </html>
