--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
     <link href="full-package.css" type="text/css" rel="stylesheet">
     <script src="jquery.js" type="text/javascript"></script>
     <script src="jquery-ui.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        window.ERKENNINGEN_GRAPHQL_API_URL = 'http://localhost:3010/graphql';
+        window.ERKENNINGEN_LOGIN_URL = 'https://administratie.erkenningen.nl/Default.aspx?tabid=154';
+        window.ERKENNINGEN_SITE_TYPE = 'content';
+        </script>
     <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no'">
 </head>
